ecmascript/parser/tests/typescript-errors/function/input.ts.stderr
error: A binding pattern parameter cannot be optional in an implementation signature.
 --> $DIR/tests/typescript-errors/function/input.ts:1:14
  |
1 | function f([]?, {}) {}
  |              ^

